@@ -17,7 +17,7 @@ For 5.1
     TODO: Use NSDictionaryController and bindings for all controls in main window and sub-controllers
     TODO: File watching still broken for script path
     TODO: Documentation should be updated about what Use Icon as Template does
-    TODO: Add build script for cat2html
+
     http://stackoverflow.com/questions/13355363/nstask-requires-flush-when-reading-from-a-process-stdout-terminal-does-not
     http://stackoverflow.com/questions/1276029/non-blocking-stdio
 
@@ -26,7 +26,9 @@ For 5.1
     TODO: Add WebView example listing dropped files
     TODO: Make clearAllFields stuff use default spec
     TODO: Use NSString constants for NSUserDefault string keys
+    TODO: Give image names for interface type and interpreter a filename prefix indicating family
 
+    * Added build script for cat2html
     * Added support for multiple arguments to --bundled-file in command line tool via "|" separator
     * Various minor UI improvements (button status in args & drop settings window)
     * Now treating drop into STPathTextField like any other drop on window
